# html-ml

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  data-model.md  product-spec.md  questions.md
scripts/: hltv_dom_dump.py  hltv_match_details_playwright.py  hltv_matches_playwright.py  hltv_probe.py  hltv_probe_playwright.py
tests/: test_baseline.py  test_hltv_collector.py  test_linker.py  test_market_moves.py  test_polling.py  test_polymarket.py  test_polymarket_real_questions.py  test_signals.py  test_watchlist.py
