[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "html-ml"
version = "0.1.0"
description = "CS2 betting research environment with live collection, simulation, and agent benchmarking"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "typer>=0.12",
  "rich>=13.7",
  "playwright>=1.52",
  "python-dotenv>=1.0",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.11",
]

[tool.setuptools]
package-dir = {"" = "packages"}

[tool.setuptools.packages.find]
where = ["packages"]

[project.scripts]
html-ml = "html_ml.cli:app"
